# incident-timeline-reconstructor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
config/: rules.json  topology.json
docs/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md
fixtures/: actions.jsonl  alerts.jsonl
src/: __init__.py  cli.py  config.py  constants.py  engine.py  exceptions.py  models.py  reporter.py  state.py
src/parser/: base.py  jsonl_parser.py  time_aligner.py
src/rules/: causality.py  sla.py
tests/: test_suite.py
